<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".Account.SignUpForm"
    android:layoutDirection="ltr">

    <!-- company logo image -->
    <ImageView
        android:id="@+id/companyLogo"
        android:layout_width="361dp"
        android:layout_height="133dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/companyLogo"
        app:layout_constraintBottom_toTopOf="@+id/signInEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hello_carwash" />

    <!-- user email input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/signInPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLogo"
        app:layout_constraintVertical_bias="0.523">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signInEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- user password input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/signIn_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signInPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- sign in button -->
    <Button
        android:id="@+id/signIn_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/signInButton"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/services_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPass"
        app:layout_constraintVertical_bias="0.491" />

    <!-- services & prices button -->
    <Button
        android:id="@+id/services_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/signInPricesButton"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/noAccount_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_Button" />

    <!-- user without account button -->
    <Button
        android:id="@+id/noAccount_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:text="@string/signInHaveNotAccount"
        android:textAllCaps="false"
        android:textColor="@color/colorLink"
        android:textSize="16.5sp"
        app:layout_constraintBottom_toTopOf="@+id/forgetPass_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/services_Button" />

    <!-- forget password button -->
    <Button
        android:id="@+id/forgetPass_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:text="@string/signInResetPassword"
        android:textAllCaps="false"
        android:textColor="@color/colorLink"
        android:textSize="16.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAccount_Button" />
</android.support.constraint.ConstraintLayout>