<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".Account.SignUpForm"
    android:layoutDirection="ltr">

    <!-- fullName input-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_FullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ti_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signUpFullName"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>
    <!-- email input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ti_PhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_FullName">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signUpEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- phone number input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ti_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_Email">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signUpPhoneNum"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- password input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ti_ConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_PhoneNumber">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signUpPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- confirm password -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/registry_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_Password">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/signUpConfirmPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>
    <!-- Registry Button -->
    <Button
        android:id="@+id/registry_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/signUpRegistryButton"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/haveAccount_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_ConfirmPassword" />
    <!-- Already Have an Account Button -->
    <Button
        android:id="@+id/haveAccount_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="85dp"
        android:background="@null"
        android:text="@string/signUpHaveAccount"
        android:textAllCaps="false"
        android:textColor="@color/colorLink"
        android:textSize="16.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry_Button" />


</android.support.constraint.ConstraintLayout>